# blucy

./: .gitignore  CMakeLists.txt  model.config  package.xml
config/: joint_names_blucy.yaml
launch/: blucy_gazebo.launch.py  blucy_test_gazebo.launch.py
meshes/: altimeter.STL  battery.STL  bled1.STL  bled2.STL  dvl.STL  fog.STL  led1.STL  led2.STL  led3.STL  led4.STL  leftcover.STL  microstrain.STL  mini_ct.STL  mini_svs.STL  multibeam.STL  nikon_camera.STL  pilot_camera.STL  propeller1.STL  propeller2.STL  propeller3.STL  propeller4.STL  propeller5.STL  propeller6.STL  rightcover.STL  topfoam.STL
plugins/: ApplyBuoyancySystem.cc  ApplyBuoyancySystem.hh  ApplyHydrodynamicSystem.cc  ApplyHydrodynamicSystem.hh  ApplyThrusterSystem.cc  ApplyThrusterSystem.hh
urdf/: blucy.csv  blucy.urdf  blucy_test.urdf
world/: emptyworld.world  underwater.world
world/Turquoise turbidity generator/: model.sdf
