<?xml version="1.0"?>
<package format="3">
  <name>blucy</name>
  <version>0.1.0</version>
  <description>Blucy drone package for simulation in Gazebo Fortress</description>
  <maintainer email="siva@example.com">Siva</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "/home/siva/ros2_ws/src/blucy/"/>
  </export>
</package>